<resources>
    <string name="app_name">Mjecipes</string>

    <!-- snackbar strings -->
    <string name="no_connection">No connection</string>
    <string name="no_connection_cache_first">No connection, loaded information might be old</string>
    <string name="done">Done</string>
    <string name="error_commenter_alredy_comment">Not done, you have already comment</string>
    <string name="error_comment_text_missing">Not done, text is missing</string>
    <string name="error_comment_text_wrong_length">Not done, wrong text length</string>
    <string name="error_comment_grade_invalid">Not done, missing grade</string>
    <string name="error_image_upload">Image not uploaded</string>
    <string name="error_favorite_recipe">Problem when making favorite</string>
    <string name="error_delete_recipe">Problem when deleting recipe</string>
    <string name="error_permission_needed">You have to give permissions to do that</string>
    <string name="error_recipe_not_edited">Recipe not edited</string>
    <string name="error_recipe_name_missing">Name is missing</string>
    <string name="error_recipe_name_wrong_length">Wrong name length</string>
    <string name="error_recipe_desc_missing">Description missing</string>
    <string name="error_recipe_desc_wrong_length">Wrong description length</string>
    <string name="error_recipe_direc_missing">Not done, there is no direction</string>
    <string name="error_recipe_direc_desc_missing">Not done, one of the direction\'s description is missing</string>
    <string name="error_recipe_direc_desc_wrong_length">Not done, one of the direction\'s have wrong length</string>

    <!-- common strings -->
    <string name="upload_image">Upload image</string>
    <string name="something_went_wrong">Something went wrong</string>

    <!-- mainactivity strings -->
    <string name="search_hint">Search recipes</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="main_menu_search">Search</string>
    <string name="main_menu_refresh">Refresh</string>
    <string name="main_activity_no_recipe">No recipes</string>

    <!-- drawer strings -->
    <string name="drawer_my_account">My Account</string>
    <string name="drawer_my_recipes">My Recipes</string>
    <string name="drawer_my_fav_recipes">My Favorite Recipes</string>
    <string name="drawer_create_a_recipe">Create A Recipe</string>
    <string name="drawer_random_recipe">Random Recipe</string>
    <string name="drawer_sign_up">Sign up</string>
    <string name="drawer_log_out">Logout</string>
    <string name="drawer_log_in">Login</string>
    <string name="drawer_not_logged_in">Not logged in</string>

    <!-- login strings -->
    <string name="app_login">Login to Mjecipes</string>
    <string name="login_email_t">Email</string>
    <string name="login_password_t">Password</string>
    <string name="login_email_hint">Enter your email</string>
    <string name="login_password_hint">Enter your password</string>
    <string name="login_cb_show_pass">Show Password</string>
    <string name="login_button">Login</string>

    <!-- showrecipe strings -->
    <string name="app_comments">Comments</string>
    <string name="show_recipe_directions">Directions</string>
    <string name="show_recipe_menu_show_comments">Show comments</string>
    <string name="show_recipe_menu_make_favorite">Favorite</string>
    <string name="show_recipe_menu_edit">Edit recipe</string>
    <string name="show_recipe_menu_delete">Delete recipe</string>
    <string name="show_recipe_poster">[POSTER]</string>

    <!-- showcomments strings -->
    <string name="show_comment_text_placeholder">[COMMENT_TEXT]</string>
    <string name="show_comment_commenter_placeholder">[COMMENTER_TEXT]</string>
    <string name="show_comment_action_menu_delete">Delete comment</string>
    <string name="show_comment_action_menu_edit">Edit comment</string>
    <string name="show_comment_no_comment">No comments</string>

    <!-- sharedprefs keys -->
    <string name="shared_preference_key">se.ju.student.android_mjecipes.SharedPreferences</string>
    <string name="shared_preference_logged_in_key">se.ju.student.android_mjecipes.SharedPreferences.UserLoggedIn</string>
    <string name="shared_preference_username_key">se.ju.student.android_mjecipes.SharedPreferences.UserName</string>
    <string name="shared_preference_userid_key">se.ju.student.android_mjecipes.SharedPreferences.UserID</string>
    <string name="shared_preference_password_key">se.ju.student.android_mjecipes.SharedPreferences.Password</string>
    <string name="shared_preference_cache_exp_key">se.ju.student.android_mjecipes.SharedPreferences.CacheExpiration</string>
    <string name="shared_preference_cache_limit_key">se.ju.student.android_mjecipes.SharedPreferences.CacheLimit</string>
    <string name="shared_preference_cache_quality_key">se.ju.student.android_mjecipes.SharedPreferences.CacheQuality</string>

    <!-- createcommentfragment strings -->
    <string name="create_comment_text">Comment</string>
    <string name="create_comment_text_hint">Enter comment</string>
    <string name="create_comment_grade">Grade</string>
    <string name="create_comment_upload_image_button">Pick image</string>
    <string name="create_comment_remove_image_button">Remove image</string>
    <string name="create_comment_post_button">Post</string>

    <!-- createrecipe strings -->
    <string name="app_create_recipe">Create recipe</string>
    <string name="create_recipe_name">Name</string>
    <string name="create_recipe_name_hint">Enter name</string>
    <string name="create_recipe_desc">Description</string>
    <string name="create_recipe_desc_hint">Enter description</string>
    <string name="create_recipe_direcs">Directions</string>
    <string name="create_recipe_add_direc">Add a new direction</string>
    <string name="create_recipe_post">Post</string>

    <!-- showaccount strings -->
    <string name="show_account_username">Username</string>
    <string name="show_account_latitude">Latitude</string>
    <string name="show_account_longitude">Longitude</string>
    <string name="show_account_menu_add_loc">Add Location</string>
    <string name="show_account_menu_edit_loc">Edit Location</string>
    <string name="show_account_menu_delete_loc">Delete Location</string>
    <string name="show_account_menu_delete_acc">Delete Account</string>

</resources>
