<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/show_comments"
        android:icon="@drawable/ic_comment_white_24dp"
        android:title="@string/show_recipe_menu_show_comments"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/make_favorite"
        android:icon="@drawable/ic_favorite_border_white_24dp"
        android:title="@string/show_recipe_menu_make_favorite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/edit"
        android:icon="@drawable/ic_edit_white_24dp"
        android:title="@string/show_recipe_menu_edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/upload_image"
        android:icon="@drawable/ic_image_white_24dp"
        android:title="@string/upload_image"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/show_recipe_menu_delete"
        app:showAsAction="ifRoom" />
</menu>