<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:visible="false"
        android:id="@+id/add_location"
        android:title="@string/show_account_menu_add_loc"
        android:icon="@drawable/ic_location_on_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:visible="false"
        android:id="@+id/edit_location"
        android:title="@string/show_account_menu_edit_loc"
        android:icon="@drawable/ic_edit_location_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:visible="false"
        android:id="@+id/delete_location"
        android:title="@string/show_account_menu_delete_loc"
        android:icon="@drawable/ic_location_off_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:visible="false"
        android:id="@+id/delete_account"
        android:title="@string/show_account_menu_delete_acc"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="ifRoom" />

</menu>