<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="se.ju.student.android_mjecipes.LoginActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_below="@+id/login_email_text"
        android:layout_alignStart="@+id/login_email_text"
        android:layout_marginTop="11dp"
        android:id="@+id/login_email"
        android:hint="@string/login_email_hint" />

    <TextView
        android:text="@string/login_password_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_email"
        android:layout_alignStart="@+id/login_email"
        android:layout_marginTop="21dp"
        android:id="@+id/login_password_text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/login_password_text"
        android:layout_alignEnd="@+id/login_email"
        android:layout_marginTop="11dp"
        android:id="@+id/login_password"
        android:hint="@string/login_password_hint" />

    <CheckBox
        android:text="@string/login_cb_show_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password"
        android:layout_alignStart="@+id/login_password"
        android:layout_marginTop="12dp"
        android:id="@+id/login_cb_sp" />

    <TextView
        android:text="@string/login_email_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="64dp"
        android:id="@+id/login_email_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:layout_alignTop="@+id/login_cb_sp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="31dp" />
</RelativeLayout>
