<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_show_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="se.ju.student.android_mjecipes.ShowAccountActivity">

    <TextView
        android:text="@string/show_account_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView5"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView5"
        android:layout_marginStart="63dp"
        android:id="@+id/showusername"
        android:background="?android:attr/colorButtonNormal"
        android:layout_marginTop="20dp"/>

    <TextView
        android:text="@string/show_account_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="31dp"
        android:id="@+id/textView8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView8"
        android:layout_marginLeft="126dp"
        android:id="@+id/showlatitude"
        tools:inputType="number"
        android:background="?android:attr/colorButtonNormal"/>

    <TextView
        android:text="@string/show_account_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:id="@+id/textView10"
        android:layout_below="@+id/textView8"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView10"
        android:layout_marginLeft="128dp"
        android:id="@+id/showlongitude"
        android:inputType="number"
        android:background="?android:attr/colorButtonNormal"/>

</RelativeLayout>
